# nonebot-plugin-majsouldraw

./: .gitignore  README.md  pyproject.toml
majsouldraw/: __init__.py
nonebot_plugin_majsouldraw/: __init__.py  handler.py
