[project]
name = "nonebot-plugin-majsouldraw"
version = "0.1.0"
description = "适配 nonebot 的插件，实现模拟雀魂十连的效果"
authors = [
    {name = "qkm66666",email = "739862481@qq.com"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nonebot>=1.9.1",
    "numpy>=2.2.2",
    "Pillow>=11.1.0",
    "pydantic>=2.10.6",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
